--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="io.github.vvb2060.boringssl.test">
+    package="io.github.vvb2060.ndk.boringssl.test">
 
     <application
         android:hasCode="false"
