--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,15 +4,14 @@ plugins {
 
 android {
     compileSdkVersion 30
-    buildToolsVersion '30.0.2'
-
+    buildToolsVersion '30.0.3'
+    ndkVersion '21.3.6528147'
     defaultConfig {
         applicationId 'io.github.vvb2060.boringssl.test'
         minSdkVersion 16
         targetSdkVersion 30
-        versionCode 1
-        versionName 'android-r-beta-3'
-        ndkVersion '21.3.6528147'
+        versionCode 2
+        versionName 'android-s-preview-1'
         externalNativeBuild {
             ndkBuild.arguments "-j${Runtime.runtime.availableProcessors()}"
         }
@@ -32,8 +31,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     buildFeatures {
