--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,6 +1,6 @@
 name: Build
 
-on: [push, pull_request]
+on: [ push, pull_request ]
 
 jobs:
   build:
@@ -12,27 +12,41 @@ jobs:
         os: [ ubuntu-latest, windows-latest, macOS-latest ]
 
     steps:
-    - name: Check out
-      uses: actions/checkout@v2
-      with:
-        submodules: 'recursive'
-    - name: Set up JDK 11
-      uses: actions/setup-java@v1
-      with:
-        java-version: '11'
-    - name: Build with Gradle
-      run: |
-        ./gradlew publishToMavenLocal
-        ./gradlew aRelease
-    - name: Upload app
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ matrix.os }}-app
-        path: |
-          app/build/outputs
-          boringssl/build/outputs
-    - name: Upload library
-      uses: actions/upload-artifact@v2
-      with:
-        name: ${{ matrix.os }}-library
-        path: ~/.m2
+      - name: Check out
+        uses: actions/checkout@v2
+        with:
+          submodules: 'recursive'
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: '11'
+      - name: Configuration Environment
+        shell: bash
+        run: |
+          echo 'android.sdk.channel=3' >> gradle.properties
+          echo 'android.native.buildOutput=verbose' >> gradle.properties
+          echo 'android.testoptions.manageddevices.emulator.gpu=swiftshader_indirect' >> gradle.properties
+          echo 'org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8' >> gradle.properties
+          echo 'org.gradle.caching=true' >> gradle.properties
+          echo 'org.gradle.parallel=true' >> gradle.properties
+          echo -e "84831b9409646a918e30573bab4c9c91346d8abd" > $ANDROID_SDK_ROOT/licenses/android-sdk-preview-license
+      - name: Build with Gradle
+        run: |
+          ./gradlew :b:publishToMavenLocal
+          ./gradlew :a:assembleDebug
+      - name: Test with Gradle
+        if: matrix.os == 'macOS-latest'
+        run: |
+          ./gradlew :a:allDevicesDebugAndroidTest
+          ls -l app/build/outputs/androidTest-results/managedDevice/atd64bit/testlog
+          rm -v app/build/outputs/androidTest-results/managedDevice/*/testlog/adb.additional_test_output*
+      - name: Upload app
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.os }}-app
+          path: app/build/outputs
+      - name: Upload library
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ matrix.os }}-library
+          path: ~/.m2
