--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,20 @@
+import com.android.build.api.dsl.ManagedVirtualDevice
+
 plugins {
     id 'com.android.application'
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion '30.0.3'
-    ndkVersion '21.4.7075529'
+    compileSdkVersion 32
+    buildToolsVersion '32.0.0'
+    ndkVersion '23.1.7779620'
     defaultConfig {
         applicationId 'io.github.vvb2060.boringssl.test'
         minSdkVersion 16
-        targetSdkVersion 30
-        versionCode 2
-        versionName 'android-s-preview-1'
+        targetSdkVersion 32
+        versionCode 3
+        versionName 'android-t-preview-2'
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         externalNativeBuild {
             ndkBuild.arguments "-j${Runtime.runtime.availableProcessors()}"
         }
@@ -19,7 +22,6 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled true
             signingConfig signingConfigs.debug
         }
     }
@@ -39,12 +41,33 @@ android {
         buildConfig false
         prefab true
     }
-}
 
-repositories {
-    mavenLocal()
+    packagingOptions {
+        jniLibs {
+            useLegacyPackaging false
+        }
+    }
+
+    testOptions {
+        devices {
+            atd64bit(ManagedVirtualDevice) {
+                device = "Pixel 2"
+                apiLevel = 31
+                systemImageSource = "aosp-atd"
+                require64Bit = true
+            }
+            atd32bit(ManagedVirtualDevice) {
+                device = "Pixel 2"
+                apiLevel = 30
+                systemImageSource = "aosp-atd"
+                require64Bit = false
+            }
+        }
+    }
 }
 
 dependencies {
-    implementation 'io.github.vvb2060.ndk:boringssl:2.1'
+//    implementation 'io.github.vvb2060.ndk:boringssl:3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 }
