--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="io.github.vvb2060.ndk.boringssl.test">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
-        android:hasCode="false"
         android:label="BoringSSL"
-        android:theme="@android:style/Theme.DeviceDefault.Light.DarkActionBar"
-        android:extractNativeLibs="true"
-        tools:ignore="AllowBackup,MissingApplicationIcon"
-        tools:targetApi="m" />
+        android:theme="@android:style/Theme.DeviceDefault"
+        tools:ignore="AllowBackup,MissingApplicationIcon" />
 </manifest>
