--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,10 @@ android {
 
     buildTypes {
         release {
-            signingConfig signingConfigs.debug
+            minifyEnabled = true
+            shrinkResources = true
+            signingConfig = signingConfigs.debug
+            proguardFiles("proguard-rules.pro")
         }
     }
 
