--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,10 @@ android {
         versionName 'android-14.0.0_r18'
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         externalNativeBuild {
-            ndkBuild.arguments "-j${Runtime.runtime.availableProcessors()}"
+            ndkBuild {
+                arguments "-j${Runtime.runtime.availableProcessors()}", "APP_LDFLAGS+=-flto"
+                cFlags "-flto"
+            }
         }
     }
 
@@ -53,17 +56,17 @@ android {
 
     testOptions {
         devices {
-            atd64bit(ManagedVirtualDevice) {
+            api34(ManagedVirtualDevice) {
                 device = "Pixel 2"
-                apiLevel = 31
+                apiLevel = 34
                 systemImageSource = "aosp-atd"
                 require64Bit = true
             }
-            atd32bit(ManagedVirtualDevice) {
+            api30(ManagedVirtualDevice) {
                 device = "Pixel 2"
                 apiLevel = 30
                 systemImageSource = "aosp-atd"
-                require64Bit = false
+                require64Bit = true
             }
         }
     }
