--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,44 +5,58 @@ on: [ push, pull_request ]
 jobs:
   build:
     name: Build
-    runs-on: macOS-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - name: Check out
         uses: actions/checkout@v4
         with:
           submodules: 'recursive'
-      - name: Set up JDK 17
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: '17'
+          java-version: '21'
       - name: Configuration Environment
         shell: bash
         run: |
           echo 'android.sdk.channel=3' >> gradle.properties
           echo 'android.native.buildOutput=verbose' >> gradle.properties
-          echo 'android.testoptions.manageddevices.emulator.gpu=swiftshader_indirect' >> gradle.properties
           echo 'org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8' >> gradle.properties
           echo 'org.gradle.caching=true' >> gradle.properties
           echo 'org.gradle.parallel=true' >> gradle.properties
-          echo '84831b9409646a918e30573bab4c9c91346d8abd' > $ANDROID_SDK_ROOT/licenses/android-sdk-preview-license
-          sed -i '' 's|return X509_CERT_DIR;|return "/system/etc/security/cacerts";|' boringssl/src/main/native/src/crypto/x509/x509_def.c
+
+          echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+          sudo udevadm control --reload-rules
+          sudo udevadm trigger --name-match=kvm
+          sudo usermod -aG kvm,render $USER
+          yes | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null || true
+          $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --channel=3 platform-tools emulator
+
+          sed -i 's|return X509_CERT_DIR;|return "/system/etc/security/cacerts";|' boringssl/src/main/native/src/crypto/x509/x509_def.c
+          sed -i '/gmock.h/d' boringssl/src/main/native/src/crypto/test/gtest_main.cc
+          sed -i 's/InitGoogleMock/InitGoogleTest/' boringssl/src/main/native/src/crypto/test/gtest_main.cc
       - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
+        uses: gradle/actions/setup-gradle@v3
         with:
           gradle-home-cache-cleanup: true
       - name: Build with Gradle
         run: |
           ./gradlew :a:assemble
           ./gradlew :b:publishToMavenLocal
+          ./gradlew :b:publishToMavenLocal -PenableLTO=1
       - name: Test with Gradle
         run: |
           ./gradlew :a:allDevicesDebugAndroidTest
-          rm -v app/build/outputs/androidTest-results/managedDevice/*/*/testlog/adb.additional_test_output*
       - name: Upload app
         uses: actions/upload-artifact@v4
         with:
           name: app
           path: app/build/outputs
+          compression-level: 9
+      - name: Upload library
+        uses: actions/upload-artifact@v4
+        with:
+          name: library
+          path: ~/.m2
           compression-level: 9
