--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdk = 21
         targetSdk = 35
-        versionCode = 7
-        versionName = 'android-15.0.0_r1'
+        versionCode = 20241024
+        versionName = '20241024'
         testInstrumentationRunner = 'androidx.test.runner.AndroidJUnitRunner'
         externalNativeBuild {
             ndkBuild {
