--- a/boringssl/build.gradle
+++ b/boringssl/build.gradle
@@ -7,13 +7,8 @@ plugins {
 def enableLTO = providers.gradleProperty("enableLTO")
 
 android {
-    compileSdk = 35
-    buildToolsVersion = '35.0.1'
-    ndkVersion = '28.0.12674087'
     namespace = 'io.github.vvb2060.ndk.boringssl'
     defaultConfig {
-        minSdk = 21
-        targetSdk = 35
         externalNativeBuild {
             ndkBuild {
                 arguments += [ "-j${Runtime.runtime.availableProcessors()}" ]
@@ -60,9 +55,9 @@ publishing {
             group 'io.github.vvb2060.ndk'
             artifactId 'boringssl'
             if (enableLTO.present) {
-                version '20250114-lto-ndk28'
+                version '20251124-lto-ndk29'
             } else {
-                version '20250114'
+                version '20251124'
             }
             afterEvaluate {
                 from components.release
@@ -97,7 +92,7 @@ publishing {
     repositories {
         maven {
             name 'ossrh'
-            url 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/'
+            url 'https://ossrh-staging-api.central.sonatype.com/service/local/staging/deploy/maven2/'
             credentials(PasswordCredentials)
         }
     }
